Importador ha sido creado, se sincronizó el visor con el editor